# polaris

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
dev/: daily.txt  issues.txt  log.txt  todo.txt
dev/.obsidian/: workspace.json
dev/dev/: daily.md  issues.md  opcodes.md  todo.md
dev/dev/.obsidian/: workspace.json
include/: ast.h  benchmark.h  bytecode.h  c_converter.h  code_generator.h  common.h  compiler.h  config.h  config.h.in  error.h  lexer.h  misc.h  opcodes.h  parser.h  scope.h  semantic.h  sym_table.h  util.h  value.h
notes/notes/: 2023-05-14.md  Code Generator.md  Grammar.md  Optimizations.md  Polaris.md  TODO.md  VM.md
notes/notes/.obsidian/: graph.json  workspace.json
src/: benchmark.c  benchmark.cpp  c_converter.cpp  code_generator.c  code_generator.cpp  compiler.c  compiler.cpp  error.c  error.cpp  lexer.c  lexer.cpp  main.c  main.cpp  misc.c  parser.c  parser.cpp  scope.cpp  semantic.cpp  sym_table.cpp  util.cpp
tests/: assignment.pol  basic.pol  bin_hex.pol  conversion.pol  test.pol
unit_tests/: input.pol  variable.pol
vm/: CMakeLists.txt
vm/include/: bytecode.h  debug.h  mem.h  opcodes.h  value.h  vm.h
vm/src/: bytecode.c  debug.c  mem.c  value.c  vm.c
